Update decimal limits and flag color

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <label for="euroInput">Valor em Euros (€)</label>
                 
                 <div class="input-wrapper">
-                    <input type="number" id="euroInput" placeholder="10.00" inputmode="decimal">
+                    <input type="number" id="euroInput" placeholder="10.00" step="0.01" inputmode="decimal">
                     <span class="flag">🇪🇺</span>
                 </div>
 
@@ -53,7 +53,7 @@
                 <label for="realInput">Valor em Reais (R$)</label>
                 
                 <div class="input-wrapper">
-                    <input type="number" id="realInput" placeholder="50.00" inputmode="decimal">
+                    <input type="number" id="realInput" placeholder="50.00" step="0.01" inputmode="decimal">
                     <span class="flag">🇧🇷</span>
                 </div>
 
